--- a/assets/config.json
+++ b/assets/config.json
@@ -11,7 +11,7 @@
   },
   "output": {
     "path": "dist",
-    "publicPath": "/app/themes/sage/dist/"
+    "publicPath": "../"
   },
   "devUrl": "http://example.dev",
   "devPort": 3000
