--- a/package.json
+++ b/package.json
@@ -22,45 +22,47 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
-    "autoprefixer": "^6.1.0",
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.0",
+    "autoprefixer": "^6.3.6",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-register": "^6.5.2",
-    "body-parser": "^1.14.1",
-    "browser-sync": "^2.11.2",
-    "clean-webpack-plugin": "^0.1.8",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
+    "body-parser": "^1.15.2",
+    "browser-sync": "^2.13.0",
+    "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
-    "cssnano": "^3.5.2",
-    "eslint": "^2.5.1",
+    "cssnano": "^3.7.1",
+    "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "image-webpack-loader": "^1.6.3",
+    "image-webpack-loader": "^1.8.0",
     "imagemin-pngcrush": "^5.0.0",
     "imports-loader": "^0.6.5",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "0.0.3",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.8.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss": "^5.0.18",
+    "postcss": "^5.0.21",
     "postcss-loader": "^0.9.1",
-    "qs": "^6.1.0",
-    "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^3.1.1",
-    "style-loader": "^0.13.0",
+    "qs": "^6.2.0",
+    "resolve-url-loader": "^1.4.4",
+    "sass-loader": "^3.2.1",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.5.0",
+    "babel-runtime": "^6.9.2",
     "bootstrap": "^4.0.0-alpha.2",
-    "tether": "^1.2.0"
+    "material-design-icons": "^2.2.3",
+    "material-design-lite": "^1.1.3",
+    "tether": "^1.3.2"
   }
 }
