--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
     "body-parser": "^1.15.2",
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.8.0",
     "browser-sync": "^2.13.0",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
