--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
-    "bootstrap": "^4.0.0-alpha.2",
     "material-design-icons": "^2.2.3",
     "material-design-lite": "^1.1.3",
+    "prismjs": "^1.5.1",
     "tether": "^1.3.2"
   }
 }
