--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "url": "git://github.com/hiro0218/kiku-theme.git"
   },
   "license": "MIT",
+  "keyword": [
+    "wordpress",
+    "theme",
+    "mdl",
+    "material design lite"
+  ],
   "scripts": {
     "build:production": "webpack -p --progress --release",
     "build": "webpack -d --progress",
@@ -20,7 +26,7 @@
     "autoprefixer": "^6.3.7",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.0",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
@@ -30,21 +36,21 @@
     "browser-sync": "^2.13.0",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
-    "cssnano": "^3.7.1",
+    "cssnano": "^3.7.2",
     "eslint": "^3.0.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "image-webpack-loader": "^1.8.0",
+    "image-webpack-loader": "^2.0.0",
     "imagemin-pngcrush": "^5.0.0",
     "imports-loader": "^0.6.5",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "0.0.3",
     "node-sass": "^3.8.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss": "^5.0.21",
+    "postcss": "^5.1.0",
     "postcss-loader": "^0.9.1",
     "qs": "^6.2.0",
     "resolve-url-loader": "^1.6.0",
@@ -59,7 +65,6 @@
     "babel-runtime": "^6.9.2",
     "material-design-icons": "^2.2.3",
     "material-design-lite": "^1.1.3",
-    "prismjs": "^1.5.1",
-    "tether": "^1.3.2"
+    "prismjs": "^1.5.1"
   }
 }
