--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
+    "image-zoom": "^1.1.1",
     "material-design-icons": "^2.2.3",
     "material-design-lite": "^1.1.3",
     "prismjs": "^1.5.1"
