--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
     "autoprefixer": "^6.4.0",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-register": "^6.11.6",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.14.0",
+    "browser-sync": "^2.14.3",
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.24.0",
     "cssnano": "^3.7.4",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^10.0.1",
+    "eslint": "^3.4.0",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-react": "^6.1.2",
+    "eslint-plugin-react": "^6.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "image-webpack-loader": "^2.0.0",
