--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
-dist
+/dist
 bower_components
 node_modules
 npm-debug.log
-vendor
+/vendor
 
 *.DS_Store
 ._*
