--- a/assets/config.json
+++ b/assets/config.json
@@ -1,5 +1,4 @@
 {
-  "context": "assets",
   "entry": {
     "main": [
       "./scripts/main.js",
@@ -9,10 +8,9 @@
       "./scripts/customizer.js"
     ]
   },
-  "output": {
-    "path": "dist",
-    "publicPath": "../"
-  },
-  "devUrl": "http://example.dev",
-  "devPort": 3000
+  "path": "dist",
+  "publicPath": "../",
+  "devUrl": "https://example.dev",
+  "proxyUrl": "https://localhost:3000",
+  "cacheBusting": "[name]_[hash:8]"
 }
