--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "material design lite"
   ],
   "scripts": {
-    "build:production": "webpack -p --progress --release",
-    "build": "webpack -d --progress",
-    "watch": "node watch.js --watch",
-    "lint": "eslint -c .eslintrc assets/scripts watch.js webpack.config.js",
-    "install": "composer install"
+    "build": "webpack --progress --config assets/build/webpack.config.js",
+    "build:production": "npm run build -s -- -p",
+    "start": "npm run build -s -- --watch",
+    "clean": "node node_modules/rimraf/bin.js dist",
+    "lint": "node node_modules/eslint/bin/eslint.js assets/scripts assets/build",
+    "test": "npm run lint -s"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "^6.4.1",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
@@ -32,39 +33,43 @@
     "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
-    "bourbon": "^4.2.7",
-    "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.14.3",
+    "browser-sync": "^2.15.0",
+    "browser-sync-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.10",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.25.0",
     "cssnano": "^3.7.4",
     "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-config-airbnb-es5": "^1.0.9",
     "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
-    "image-webpack-loader": "^2.0.0",
-    "imagemin-pngcrush": "^5.0.0",
+    "glob-all": "^3.1.0",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-webpack-plugin": "^1.1.0",
     "imports-loader": "^0.6.5",
+    "lodash": "^4.15.0",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "0.0.3",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.9.3",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.1.2",
-    "postcss-loader": "^0.11.0",
+    "postcss-loader": "^0.11.1",
     "qs": "^6.2.1",
     "resolve-url-loader": "^1.6.0",
-    "sass-loader": "^4.0.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.6",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^2.1.0-beta.21"
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
     "image-zoom": "^1.1.1",
-    "material-design-icons": "^3.0.0",
+    "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.0",
     "prismjs": "^1.5.1"
   }
