--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.8.0",
     "browser-sync": "^2.15.0",
     "browser-sync-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.10",
@@ -67,7 +69,6 @@
     "webpack": "^2.1.0-beta.21"
   },
   "dependencies": {
-    "babel-runtime": "^6.11.6",
     "image-zoom": "^1.1.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.1",
