--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "qs": "^6.2.1",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
+    "sass-lint": "^1.9.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
