--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "browser-sync-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.25.0",
+    "csscomb-loader": "0.0.2",
     "cssnano": "^3.7.4",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^11.0.0",
