Merge: Sage 9.0.0-alpha.3

--- a/assets/config.json
+++ b/assets/config.json
@@ -8,7 +8,10 @@
       "./scripts/customizer.js"
     ]
   },
-  "path": "dist",
+  "watch": [
+    "templates/**/*.php",
+    "src/**/*.php"
+  ],
   "publicPath": "../",
   "devUrl": "https://example.dev",
   "proxyUrl": "https://localhost:3000",
