--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build": "webpack --progress --config assets/build/webpack.config.js",
     "build:production": "npm run build -s -- -p",
     "start": "npm run build -s -- --watch",
-    "clean": "node node_modules/rimraf/bin.js dist",
-    "lint": "node node_modules/eslint/bin/eslint.js assets/scripts assets/build",
+    "clean": "rimraf dist",
+    "lint": "eslint assets/scripts assets/build",
     "test": "npm run lint -s"
   },
   "devDependencies": {
@@ -35,29 +35,29 @@
     "body-parser": "^1.15.2",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.15.0",
+    "browser-sync": "^2.16.0",
     "browser-sync-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.25.0",
     "csscomb-loader": "0.0.2",
-    "cssnano": "^3.7.4",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^11.0.0",
+    "cssnano": "^3.7.5",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
     "eslint-config-airbnb-es5": "^1.0.9",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.1",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "glob-all": "^3.1.0",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-webpack-plugin": "^1.1.0",
     "imports-loader": "^0.6.5",
-    "lodash": "^4.15.0",
+    "lodash": "^4.16.0",
     "minimist": "^1.2.0",
-    "monkey-hot-loader": "0.0.3",
-    "node-sass": "^3.9.3",
+    "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
+    "node-sass": "^3.10.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.2.0",
     "postcss-loader": "^0.13.0",
@@ -68,7 +68,9 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.21"
+    "webpack": "^2.1.0-beta.22",
+    "webpack-dev-middleware": "^1.7.0",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
     "image-zoom": "^1.1.1",
