--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-airbnb-es5": "^1.0.9",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
@@ -60,7 +60,7 @@
     "node-sass": "^3.10.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.2.0",
-    "postcss-loader": "^0.13.0",
+    "postcss-loader": "^1.0.0",
     "qs": "^6.2.1",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
@@ -76,6 +76,7 @@
     "image-zoom": "^1.1.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.1",
+    "mdl-ext": "^0.13.10",
     "prismjs": "^1.5.1"
   }
 }
