merge: Sage 9-alpha.4

--- a/assets/config.json
+++ b/assets/config.json
@@ -3,17 +3,14 @@
     "main": [
       "./scripts/main.js",
       "./styles/main.scss"
-    ],
-    "customizer": [
-      "./scripts/customizer.js"
     ]
   },
   "watch": [
     "templates/**/*.php",
     "src/**/*.php"
   ],
-  "publicPath": "../",
-  "devUrl": "https://example.dev",
-  "proxyUrl": "https://localhost:3000",
+  "publicPath": "../../",
+  "devUrl": "http://example.dev",
+  "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]"
 }
