--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git://github.com/hiro0218/kiku-theme.git"
   },
+  "bugs": {
+    "url": "https://github.com/hiro0218/kiku-theme/issues"
+  },
   "license": "MIT",
   "keyword": [
     "wordpress",
@@ -16,8 +19,9 @@
   ],
   "scripts": {
     "build": "webpack --progress --config assets/build/webpack.config.js",
-    "build:production": "npm run build -s -- -p",
-    "start": "npm run build -s -- --watch",
+    "build:production": "webpack --progress -p --config assets/build/webpack.config.js",
+    "build:profile": "webpack --progress --profile --json --config assets/build/webpack.config.js",
+    "start": "webpack --hide-modules --watch --config assets/build/webpack.config.js",
     "clean": "rimraf dist",
     "lint": "eslint assets/scripts assets/build",
     "test": "npm run lint -s"
@@ -33,6 +37,9 @@
     "babel-register": "^6.18.0",
     "babel-runtime": "^6.18.0",
     "body-parser": "^1.15.2",
+    "browser-sync": "^2.17.5",
+    "buble": "^0.14.2",
+    "buble-loader": "^0.3.2",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
     "browser-sync": "^2.17.0",
@@ -46,19 +53,20 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.5.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
+    "eslint-plugin-react": "^6.6.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
-    "glob-all": "^3.1.0",
+    "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-webpack-plugin": "^1.2.0",
+    "imagemin-webpack-plugin": "^1.2.1",
     "imports-loader": "^0.6.5",
-    "lodash": "^4.16.0",
+    "loader-utils": "^0.2.16",
+    "lodash": "^4.16.6",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
-    "node-sass": "^3.11.1",
+    "node-sass": "^3.11.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss": "^5.2.0",
+    "postcss": "^5.2.5",
     "postcss-loader": "^1.1.0",
     "qs": "^6.3.0",
     "resolve-url-loader": "^1.6.0",
@@ -67,9 +75,10 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.22",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^2.1.0-beta.26",
+    "webpack-assets-manifest": "^0.6.1",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
     "image-zoom": "^1.1.1",
