--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kiku",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "hiro <hiro@0218.jp>",
   "homepage": "http://b.0218.jp/",
   "repository": {
@@ -27,60 +27,56 @@
     "test": "npm run lint -s"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.0",
-    "autoprefixer": "^6.5.0",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.5",
+    "autoprefixer": "^6.5.3",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
     "babel-runtime": "^6.18.0",
     "body-parser": "^1.15.2",
-    "browser-sync": "^2.17.5",
-    "buble": "^0.14.2",
-    "buble-loader": "^0.3.2",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.17.0",
-    "clean-webpack-plugin": "^0.1.10",
-    "css-loader": "^0.25.0",
+    "browser-sync": "^2.18.2",
+    "buble": "^0.14.2",
+    "buble-loader": "^0.3.2",
+    "clean-webpack-plugin": "^0.1.14",
+    "css-loader": "^0.26.0",
     "csscomb-loader": "0.0.2",
     "cssnano": "^3.8.0",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-config-airbnb-es5": "^1.1.0",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-react": "^6.7.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-webpack-plugin": "^1.2.1",
-    "imports-loader": "^0.6.5",
     "loader-utils": "^0.2.16",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.2",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
-    "node-sass": "^3.11.2",
+    "node-sass": "^3.13.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.2.5",
-    "postcss-loader": "^1.1.0",
+    "postcss-loader": "^1.1.1",
     "qs": "^6.3.0",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
-    "sass-lint": "^1.9.1",
+    "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.26",
     "webpack-assets-manifest": "^0.6.1",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.1"
+    "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "image-zoom": "^1.1.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.1",
