--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "buble-loader": "^0.3.2",
     "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.0",
+    "css-mqpacker": "^5.0.1",
     "csscomb-loader": "0.0.2",
-    "cssnano": "^3.8.0",
-    "eslint": "^3.10.2",
+    "cssnano": "^3.8.1",
+    "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
@@ -54,14 +55,14 @@
     "file-loader": "^0.9.0",
     "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-webpack-plugin": "^1.2.1",
+    "imagemin-webpack-plugin": "^1.4.4",
     "loader-utils": "^0.2.16",
     "lodash": "^4.17.2",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
     "node-sass": "^3.13.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss": "^5.2.5",
+    "postcss": "^5.2.6",
     "postcss-loader": "^1.1.1",
     "qs": "^6.3.0",
     "resolve-url-loader": "^1.6.0",
