fix: load prism.js
singular page only

--- a/assets/config.json
+++ b/assets/config.json
@@ -3,6 +3,9 @@
     "main": [
       "./scripts/main.js",
       "./styles/main.scss"
+    ],
+    "prism": [
+      "./scripts/vendor/prism.js"
     ]
   },
   "watch": [
