--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
     "test": "npm run lint -s"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
+    "autoprefixer": "^6.5.4",
     "babel-core": "^6.20.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.9",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-runtime": "^6.20.0",
     "body-parser": "^1.15.2",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.18.2",
-    "buble": "^0.14.2",
+    "browser-sync": "^2.18.5",
+    "buble": "^0.15.1",
     "buble-loader": "^0.3.2",
     "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.1",
     "css-mqpacker": "^5.0.1",
     "csscomb-loader": "0.0.2",
-    "cssnano": "^3.8.1",
-    "eslint": "^3.11.1",
+    "cssnano": "^3.9.1",
+    "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.8.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
@@ -60,18 +60,18 @@
     "lodash": "^4.17.2",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
-    "node-sass": "^3.13.0",
+    "node-sass": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.2.6",
-    "postcss-loader": "^1.2.0",
+    "postcss-loader": "^1.2.1",
     "qs": "^6.3.0",
     "resolve-url-loader": "^1.6.1",
     "rimraf": "^2.5.4",
     "sass-lint": "^1.10.2",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.26",
+    "webpack": "^2.2.0-rc.0",
     "webpack-assets-manifest": "^0.6.1",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
