--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "mdl-ext": "^0.13.10",
-    "prismjs": "^1.6.0"
+    "prismjs": "^1.6.0",
+    "ua-parser-js": "^0.7.12"
   }
 }
