--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "lint": "eslint assets/scripts assets/build",
     "test": "npm run lint -s"
   },
+  "engines": {
+    "node": ">= 7.4.0"
+  },
   "devDependencies": {
-    "autoprefixer": "^6.6.0",
+    "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -37,33 +40,33 @@
     "body-parser": "^1.15.2",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.18.5",
-    "buble": "^0.15.1",
+    "browser-sync": "^2.18.6",
+    "buble": "^0.15.2",
     "buble-loader": "^0.4.0",
-    "clean-webpack-plugin": "^0.1.14",
+    "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "css-mqpacker": "^5.0.1",
     "csscomb-loader": "0.0.2",
-    "cssnano": "^3.9.1",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
+    "cssnano": "^3.10.0",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-webpack-plugin": "^1.4.4",
     "loader-utils": "^0.2.16",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
-    "node-sass": "^4.1.1",
+    "node-sass": "^4.3.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss": "^5.2.6",
-    "postcss-loader": "^1.2.1",
+    "postcss": "^5.2.10",
+    "postcss-loader": "^1.2.2",
     "qs": "^6.3.0",
     "resolve-url-loader": "^1.6.1",
     "rimraf": "^2.5.4",
@@ -71,10 +74,10 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.0-rc.0",
+    "webpack": "^2.2.0-rc.4",
     "webpack-assets-manifest": "^0.6.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.13.2"
+    "webpack-hot-middleware": "^2.15.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.20.0",
