--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "roots/sage",
+  "name": "kiku-theme",
   "type": "wordpress-theme",
   "license": "MIT",
-  "description": "WordPress starter theme with a modern development workflow",
-  "homepage": "https://roots.io/sage/",
+  "description": "WordPress theme",
+  "homepage": "https://github.com/hiro0218/kiku-theme",
   "authors": [
     {
       "name": "Ben Word",
@@ -14,14 +14,18 @@
       "name": "Scott Walkinshaw",
       "email": "scott.walkinshaw@gmail.com",
       "homepage": "https://github.com/swalkinshaw"
+    },
+    {
+      "name": "hiro",
+      "email": "hiro@0218.jp",
+      "homepage": "https://github.com/hiro0218"
     }
   ],
   "keywords": [
     "wordpress"
   ],
   "support": {
-    "issues": "https://github.com/roots/sage/issues",
-    "forum": "https://discourse.roots.io/"
+    "issues": "https://github.com/hiro0218/kiku-theme/issues"
   },
   "autoload": {
     "psr-4": {
@@ -29,7 +33,7 @@
     }
   },
   "require": {
-    "php": ">=5.5.0",
+    "php": ">=7.0.0",
     "composer/installers": "~1.0",
     "exeu/apai-io": "^2.0"
   },
