--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
+    "bulma": "^0.3.1",
     "image-zoom": "^1.1.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
