remove: MDLに関する文言

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "license": "MIT",
   "keyword": [
     "wordpress",
-    "theme",
-    "mdl",
-    "material design lite"
+    "theme"
   ],
   "scripts": {
     "build": "webpack --progress --config assets/build/webpack.config.js",
