--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "start": "webpack --hide-modules --watch --config assets/build/webpack.config.js",
     "clean": "rimraf dist",
     "lint": "eslint assets/scripts assets/build",
-    "test": "npm run lint -s"
+    "test": "yarn run lint -s"
   },
   "engines": {
     "node": ">= 7.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.0",
+    "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -36,9 +36,9 @@
     "babel-preset-stage-3": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "body-parser": "^1.16.0",
-    "bourbon": "^4.2.7",
+    "bourbon": "^4.3.0",
     "bourbon-neat": "^1.8.0",
-    "browser-sync": "^2.18.6",
+    "browser-sync": "^2.18.7",
     "buble": "^0.15.2",
     "buble-loader": "^0.4.0",
     "clean-webpack-plugin": "^0.1.15",
@@ -46,11 +46,11 @@
     "css-mqpacker": "^5.0.1",
     "csscomb-loader": "0.0.2",
     "cssnano": "^3.10.0",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.10.0",
@@ -61,9 +61,9 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
-    "node-sass": "^4.4.0",
+    "node-sass": "^4.5.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "postcss": "^5.2.11",
+    "postcss": "^5.2.12",
     "postcss-loader": "^1.2.2",
     "qs": "^6.3.0",
     "resolve-url-loader": "^1.6.1",
@@ -72,10 +72,10 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.0-rc.4",
+    "webpack": "^2.2.1",
     "webpack-assets-manifest": "^0.6.1",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0"
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
