--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -71,7 +71,10 @@ rules:
   indentation: 0
   leading-zero: 1
   nesting-depth: 1
-  property-sort-order: 0
+  property-sort-order:
+    - 1
+    -
+      order: smacss
   pseudo-element: 0
   quotes: 0
   shorthand-values: 1
