--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build:profile": "webpack --progress --profile --json --config assets/build/webpack.config.js",
     "start": "webpack --hide-modules --watch --config assets/build/webpack.config.js",
     "clean": "rimraf dist",
-    "lint": "eslint assets/scripts assets/build",
+    "lint:js": "eslint assets/scripts assets/build",
+    "lint:sass": "sass-lint -c .sass-lint.yml -q -v",
     "test": "yarn run lint -s"
   },
   "engines": {
