--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
     "babel-runtime": "^6.22.0",
-    "body-parser": "^1.16.0",
     "bourbon": "^4.3.0",
-    "bourbon-neat": "^1.8.0",
     "browser-sync": "^2.18.7",
     "buble": "^0.15.2",
     "buble-loader": "^0.4.0",
@@ -53,7 +51,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
@@ -61,7 +59,6 @@
     "loader-utils": "^0.2.16",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
-    "monkey-hot-loader": "github:rmarscher/monkey-hot-loader#webpack2-import",
     "node-sass": "^4.5.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.2.12",
@@ -70,7 +67,7 @@
     "resolve-url-loader": "^1.6.1",
     "rimraf": "^2.5.4",
     "sass-lint": "^1.10.2",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^5.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
