:up: update package

--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "css-mqpacker": "^5.0.1",
     "csscomb-loader": "0.0.2",
     "cssnano": "^3.10.0",
-    "eslint": "^3.16.1",
+    "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
