--- a/assets/config.json
+++ b/assets/config.json
@@ -15,5 +15,8 @@
   "publicPath": "../../",
   "devUrl": "http://example.dev",
   "proxyUrl": "http://localhost:3000",
-  "cacheBusting": "[name]_[hash:8]"
+  "cacheBusting": "[name]_[hash:8]",
+  "browsers": [
+    "last 2 versions"
+  ]
 }
