--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "bourbon": "^4.3.4",
-    "browser-sync": "^2.18.8",
     "buble": "^0.15.2",
     "buble-loader": "^0.4.1",
     "clean-webpack-plugin": "^0.1.16",
+    "copy-globs-webpack-plugin": "^0.2.0",
     "css-loader": "^0.28.0",
     "css-mqpacker": "^5.0.1",
     "csscomb-loader": "0.0.2",
@@ -53,17 +53,11 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
-    "glob": "^7.1.1",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-webpack-plugin": "^1.4.4",
-    "loader-utils": "^1.1.0",
-    "lodash": "^4.17.4",
-    "minimist": "^1.2.0",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
-    "postcss": "^5.2.17",
     "postcss-loader": "^1.3.3",
-    "qs": "^6.4.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
     "sass-lint": "^1.10.2",
@@ -73,7 +67,9 @@
     "webpack": "^2.4.1",
     "webpack-assets-manifest": "^0.6.2",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0",
+    "yargs": "^7.1.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
