--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "headroom.js": "^0.9.3",
     "image-zoom": "^1.1.1",
     "material-design-icons": "^3.0.1",
+    "normalize.css": "^7.0.0",
     "prismjs": "^1.6.0",
     "ua-parser-js": "^0.7.12"
   }
