--- a/assets/config.json
+++ b/assets/config.json
@@ -2,19 +2,14 @@
   "entry": {
     "main": [
       "./scripts/main.js",
+      "./styles/reset.scss",
       "./styles/main.scss"
     ],
     "prism": [
       "./scripts/vendor/prism.js"
     ]
   },
-  "watch": [
-    "templates/**/*.php",
-    "src/**/*.php"
-  ],
-  "publicPath": "../../",
-  "devUrl": "http://example.dev",
-  "proxyUrl": "http://localhost:3000",
+  "publicPath": "/wp-content/themes/kiku-theme",
   "cacheBusting": "[name]_[hash:8]",
   "browsers": [
     "last 2 versions"
