--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "node": ">= 7.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.0.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -42,8 +41,7 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-globs-webpack-plugin": "^0.2.0",
     "css-loader": "^0.28.1",
-    "css-mqpacker": "^5.0.1",
-    "csscomb-loader": "0.0.2",
+    "css-mqpacker": "^6.0.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -57,14 +55,19 @@
     "imagemin-webpack-plugin": "^1.4.4",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
+    "postcss-cssnext": "^2.10.0",
     "postcss-loader": "^1.3.3",
+    "postcss-smart-import": "^0.6.13",
+    "postcss-sorting": "^2.0.1",
+    "postcss-will-change": "^2.0.0",
+    "postcss-zindex": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
     "sass-lint": "^1.10.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.0",
+    "webpack": "^2.5.1",
     "webpack-assets-manifest": "^0.6.2",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
