--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,17 @@
 {
-  "extends": ["airbnb-base/legacy"],
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true
-  },
+  "root": true,
+  "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
   },
-  "parser": "babel-eslint",
+  "extends": [
+    "eslint:recommended",
+    "airbnb-base/legacy",
+  ],
+  "env": {
+    "es6": true,
+    "browser": true,
+  },
   "rules": {
     "no-var": 0,
     "no-unused-vars": 0,
