:recycle: 出力CSSの最適化

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "optimize-css-assets-webpack-plugin": "^1.3.1",
     "postcss-cssnext": "^2.10.0",
     "postcss-loader": "^2.0.5",
+    "postcss-merge-longhand": "^3.0.0",
     "postcss-smart-import": "^0.7.0",
     "postcss-sorting": "^2.0.1",
     "postcss-will-change": "^2.0.0",
