fix: 個別記事のJS名称

--- a/assets/config.json
+++ b/assets/config.json
@@ -5,7 +5,7 @@
       "./styles/reset.scss",
       "./styles/main.scss"
     ],
-    "prism": [
+    "single": [
       "./scripts/vendor/prism.js"
     ]
   },
