--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mokuji.js": "^1.3.3",
     "normalize.css": "^7.0.0",
     "prismjs": "^1.6.0",
-    "ua-parser-js": "^0.7.12"
+    "vue": "^2.3.4",
+    "whatwg-fetch": "^2.0.3"
   }
 }
