--- a/package.json
+++ b/package.json
@@ -73,12 +73,12 @@
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.4.3",
     "headroom.js": "^0.9.4",
-    "image-zoom": "^1.1.1",
     "material-design-icons": "^3.0.1",
     "mokuji.js": "^1.3.3",
     "normalize.css": "^7.0.0",
     "prismjs": "^1.6.0",
     "vue": "^2.3.4",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "zooming": "^1.2.2"
   }
 }
