--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mokuji.js": "^1.3.3",
     "normalize.css": "^7.0.0",
     "prismjs": "^1.6.0",
+    "s-ago": "^1.1.0",
     "vue": "^2.3.4",
     "whatwg-fetch": "^2.0.3",
     "zooming": "^1.2.2"
