--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-runtime": "^6.23.0",
+    "babel-runtime": "^6.25.0",
     "bourbon": "^4.3.4",
     "buble": "^0.15.2",
     "buble-loader": "^0.4.1",
@@ -46,7 +46,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-webpack-plugin": "^1.4.4",
+    "imagemin-webpack-plugin": "^1.5.0-beta.0",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
     "postcss-cssnext": "^3.0.2",
@@ -71,16 +71,16 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "bulma": "^0.4.4",
+    "bulma": "^0.5.0",
     "headroom.js": "^0.9.4",
     "material-design-icons": "^3.0.1",
-    "mokuji.js": "^1.3.3",
+    "mokuji.js": "^1.3.4",
     "normalize.css": "^7.0.0",
     "prismjs": "^1.6.0",
     "promise-polyfill": "^6.0.2",
     "s-ago": "^1.1.0",
     "vue": "^2.4.2",
     "whatwg-fetch": "^2.0.3",
-    "zooming": "^1.2.2"
+    "zooming": "^1.2.3"
   }
 }
