--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "headroom.js": "^0.9.4",
     "mokuji.js": "^1.3.4",
     "normalize.css": "^7.0.0",
+    "nprogress": "^0.2.0",
     "prismjs": "^1.6.0",
     "promise-polyfill": "^6.0.2",
     "s-ago": "^1.1.0",
