--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.5.1",
     "headroom.js": "^0.9.4",
+    "inview": "^0.0.8",
     "mokuji.js": "^1.3.4",
     "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
