--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1",
-    "phpmd/phpmd": "^2.4.2"
+    "phpmd/phpmd": "^2.4.2",
+    "sstalle/php7cc": "^1.2"
   },
   "scripts": {
     "test": [
