--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-webpack-plugin": "^1.5.0-beta.0",
+    "imagemin-webpack-plugin": "^1.5.1",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.1.1",
     "postcss-cssnext": "^3.0.2",
