--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bulma": "^0.5.3",
+    "cache-loader": "^1.0.3",
     "headroom.js": "^0.9.4",
     "in-view": "^0.6.1",
     "mokuji.js": "^1.3.4",
@@ -80,6 +81,7 @@
     "nprogress": "^0.2.0",
     "prismjs": "^1.8.1",
     "s-ago": "^1.1.0",
+    "thread-loader": "^1.1.1",
     "vue": "^2.4.4",
     "zooming": "^1.2.5"
   }
