--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "style-loader": "^0.19.0",
     "thread-loader": "^1.1.2",
     "url-loader": "^0.6.2",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-merge": "^4.1.0",
