--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.28.7",
     "css-mqpacker": "^6.0.1",
     "cssnano": "^3.10.0",
+    "es6-promise": "^4.1.1",
     "eslint": "^4.9.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
@@ -73,7 +74,7 @@
     "yargs": "^9.0.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "axios": "^0.17.0",
     "bulma": "^0.6.0",
     "headroom.js": "^0.9.4",
     "in-view": "^0.6.1",
