fix: 不要なpostcssを整理

--- a/package.json
+++ b/package.json
@@ -57,11 +57,7 @@
     "node-sass": "^4.5.3",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
-    "postcss-merge-longhand": "^3.0.0",
-    "postcss-smart-import": "^0.7.5",
-    "postcss-sorting": "^3.0.2",
-    "postcss-will-change": "^2.0.0",
-    "postcss-zindex": "^2.2.0",
+    "postcss-safe-parser": "^3.0.1",
     "resolve-url-loader": "^2.1.1",
     "rimraf": "^2.6.2",
     "sass-lint": "^1.12.1",
