--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "headroom.js": "^0.9.4",
-    "in-view": "^0.6.1",
+    "intersection-observer": "^0.5.0",
     "mokuji.js": "^1.3.7",
     "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
