--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-assets-manifest": "^1.0.0",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-merge": "^4.1.1",
     "yargs": "^10.0.3"
   },
