--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.1.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "buble": "^0.18.0",
     "buble-loader": "^0.4.1",
