--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "build:profile": "webpack --progress --profile --json --config assets/build/webpack.config.js",
     "start": "webpack --hide-modules --watch --config assets/build/webpack.config.js",
     "clean": "rimraf dist",
-    "lint:js": "eslint assets/scripts",
+    "lint:js": "eslint --ext .js,.vue assets/scripts/* components/*",
     "lint:sass": "sass-lint -c .sass-lint.yml -q -v",
-    "format:js": "eslint --fix assets/scripts",
+    "format:js": "eslint --fix --ext .js,.vue assets/scripts/* components/*",
     "php7cc": "vendor/bin/php7cc src/ templates/",
     "test": "yarn run lint -s"
   },
@@ -48,6 +48,7 @@
     "eslint": "^4.14.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -68,6 +69,7 @@
     "style-loader": "^0.19.1",
     "thread-loader": "^1.1.2",
     "url-loader": "^0.6.2",
+    "vue-eslint-parser": "^1.0.0",
     "vue-loader": "^13.6.1",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
