add: prettier option

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
   },
   "rules": {
     "prettier/prettier": ["error", {
+      "printWidth": 120,
       "trailingComma": "all",
       "singleQuote": true,
       "semi": true
