add: object-rest-spread

--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
   ],
   "plugins": [
     ["transform-es2015-for-of", { "loose": true }],
-    ["transform-object-assign", { "loose": true }]
+    ["transform-object-assign", { "loose": true }],
+    ["transform-object-rest-spread", { "loose": true }]
   ]
 }
