--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-for-of": "^6.23.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "cache-loader": "^1.2.0",
