WIP: paginationを取り替え

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "s-ago": "^1.2.2",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
+    "vuejs-uib-pagination": "^1.0.5",
     "vuex": "^3.0.1"
   }
 }
