fix: 優先度の低いpageをdynamic importへ変更

--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,7 @@
     ["lodash"],
     ["transform-es2015-for-of", { "loose": true }],
     ["transform-object-assign", { "loose": true }],
-    ["transform-object-rest-spread", { "loose": true }]
+    ["transform-object-rest-spread", { "loose": true }],
+    ["syntax-dynamic-import"]
   ]
 }
