--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,23 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": [
-          "ie 11",
-          "safari >= 10"
-        ]
-      },
-      "modules": false,
-      "loose": true
-    }]
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [
+            "ie 11",
+            "safari >= 10"
+          ]
+        },
+        "modules": false,
+        "loose": true
+      }
+    ]
   ],
   "plugins": [
-    ["transform-es2015-for-of", { "loose": true }],
-    ["transform-object-assign", { "loose": true }],
-    ["transform-object-rest-spread", { "loose": true }],
-    ["syntax-dynamic-import"]
+    ["@babel/plugin-transform-for-of", {"loose": true}],
+    ["@babel/plugin-transform-object-assign", {"loose": true }],
+    ["@babel/plugin-proposal-object-rest-spread", {"loose": true}],
+    ["@babel/plugin-syntax-dynamic-import"]
   ]
 }
