--- a/package.json
+++ b/package.json
@@ -40,15 +40,14 @@
     "node": ">= 8.0.0"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.2",
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.44",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.44",
+    "@babel/plugin-transform-for-of": "7.0.0-beta.44",
+    "@babel/plugin-transform-object-assign": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-es2015-for-of": "^6.23.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-loader": "^8.0.0-beta.0",
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-globs-webpack-plugin": "^0.2.0",
@@ -101,6 +100,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-cache-adapter": "^2.0.0",
+    "babel-upgrade": "0.0.19",
     "header-scroll-up": "^0.1.1",
     "localforage": "^1.7.1",
     "lodash-es": "^4.17.10",
