--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "sass-lint": "^1.12.1",
     "sass-loader": "^7.0.1",
     "sass-resources-loader": "^1.3.3",
+    "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.21.0",
     "svg-sprite-loader": "^3.7.3",
     "svg-transform-loader": "^0.2.0",
