replace: cssnext -> postcss-preset-env

--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "lint-staged": "^7.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.9.0",
-    "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
+    "postcss-preset-env": "^5.1.0",
     "postcss-safe-parser": "^3.0.1",
     "prettier": "1.13.5",
     "resolve-url-loader": "^2.3.0",
